<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_tall_about" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_tally_setting" />
        <item
            android:id="@+id/menu_records"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_tally_records" />
        <item
            android:id="@+id/menu_char"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_tally_chart" />
    </group>

</menu>