<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/tvNum1"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:text="@string/num_1" />

            <TextView
                android:id="@+id/tvNum2"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:text="@string/num_2" />

            <TextView
                android:id="@+id/tvNum3"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:text="@string/num_3" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivDelete"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_height="@dimen/tally_input_item_height"
                android:gravity="center"
                android:scaleType="center"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_delete" />
        </TableRow>


        <TableRow>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:id="@+id/tvNum4"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_4" />

                    <TextView
                        android:id="@+id/tvNum5"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_5" />

                    <TextView
                        android:id="@+id/tvNum6"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_6" />

                    <!--<TextView-->
                    <!--android:id="@+id/tvReduce"-->
                    <!--style="@style/TextAppearance.TallyNumInputItem"-->
                    <!--android:layout_height="@dimen/tally_input_item_height"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/symbol_reduce"/>-->
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tvNum7"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_7" />

                    <TextView
                        android:id="@+id/tvNum8"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_8" />

                    <TextView
                        android:id="@+id/tvNum9"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_9" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tvClear"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_clean_to_0" />

                    <TextView
                        android:id="@+id/tvNum0"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/num_0" />

                    <TextView
                        android:id="@+id/tvDot"
                        style="@style/TextAppearance.TallyNumInputItem"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/tally_input_item_height"
                        android:gravity="center"
                        android:text="@string/symbol_dot" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvOk"
                style="@style/TextAppearance.TallyNumInputItem"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="@dimen/app_text_size_large" />
        </TableRow>
    </TableLayout>

</merge>
