<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class=".module.backup.BackupFileActivityBinding">

        <variable
            name="activity"
            type="android.app.Activity" />

        <variable
            name="vm"
            type="com.coderpage.mine.app.tally.module.backup.BackupFileViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".app.tally.module.backup.BackupFileManagerActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_micro"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/lyDataExport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_touchable_white"
                    android:onClick="@{() -> vm.onExportDataClick(activity)}"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/tvExportData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:gravity="left|center_vertical"
                        android:text="@string/tally_setting_btn_data_export"
                        android:textColor="@color/appTextColorPrimary"
                        android:textSize="@dimen/app_text_size_large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvExportDataTip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/tally_setting_btn_data_export_tip"
                        android:textColor="@color/appTextColorThird"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvExportData" />

                    <View
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/padding_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvExportDataTip" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/lyDataImport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_touchable_white"
                    android:onClick="@{() -> vm.onImportDataClick(activity)}"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/tvImportData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:gravity="left|center_vertical"
                        android:text="@string/tally_setting_btn_data_import"
                        android:textColor="@color/appTextColorPrimary"
                        android:textSize="@dimen/app_text_size_large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvImportDataTip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/tally_setting_btn_data_import_tip"
                        android:textColor="@color/appTextColorThird"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvImportData" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/padding_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvImportDataTip" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:id="@+id/lyAutoBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_touchable_white"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/tvAutoBackup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:gravity="left|center_vertical"
                        android:text="@string/tally_setting_btn_data_auto_backup"
                        android:textColor="@color/appTextColorPrimary"
                        android:textSize="@dimen/app_text_size_large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAutoBackupTip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:text="@string/tally_setting_btn_data_auto_backup_tip"
                        android:textColor="@color/appTextColorThird"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvAutoBackup" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchAutoBackup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{vm.isAutoBackup}"
                        android:onClick="@{() -> vm.onAutoBackupClick()}"
                        app:layout_constraintBaseline_toBaselineOf="@id/tvAutoBackup"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <View
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:visibility="invisible"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/padding_normal"
                        app:layout_constraintTop_toBottomOf="@id/tvAutoBackupTip" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>